--- a/GitHub/FirstProject/FirstMarkdown.Rmd
+++ b/GitHub/FirstProject/FirstMarkdown.Rmd
@@ -27,3 +27,12 @@ plot(pressure)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+#Smth about Tables in MarkDown
+
+To add a table, use three or more hyphens (---) to create each column’s header, and use pipes (|) to separate each column. For compatibility, you should also add a pipe on either end of the row.
+
+| Syntax      | Description |
+| ----------- | ----------- |
+| Header      | Title       |
+| Paragraph   | Text        |
