added info about Alignment in MarkDown

--- a/GitHub/FirstProject/FirstMarkdown.Rmd
+++ b/GitHub/FirstProject/FirstMarkdown.Rmd
@@ -36,3 +36,13 @@ To add a table, use three or more hyphens (---) to create each column’s header
 | ----------- | ----------- |
 | Header      | Title       |
 | Paragraph   | Text        |
+
+
+#Smth about Alignment in MarkDown
+
+You can align text in the columns to the left, right, or center by adding a colon (:) to the left, right, or on both side of the hyphens within the header row.
+
+| Syntax      | Description | Test Text     |
+| :---        |    :----:   |          ---: |
+| Header      | Title       | Here's this   |
+| Paragraph   | Text        | And more      |
