added info about Syntax Highlighting in MarkDown

--- a/GitHub/FirstProject/FirstMarkdown.Rmd
+++ b/GitHub/FirstProject/FirstMarkdown.Rmd
@@ -46,3 +46,15 @@ You can align text in the columns to the left, right, or center by adding a colo
 | :---        |    :----:   |          ---: |
 | Header      | Title       | Here's this   |
 | Paragraph   | Text        | And more      |
+
+#Smth about Syntax Highlighting in MarkDown
+
+Many Markdown processors support syntax highlighting for fenced code blocks. This feature allows you to add color highlighting for whatever language your code was written in. To add syntax highlighting, specify a language next to the backticks before the fenced code block.
+
+```json
+{
+  "firstName": "John",
+  "lastName": "Smith",
+  "age": 25
+}
+```
